# grid_crawler_wsl

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  agent.md  patch_main.py  patch_net.py  patch_serial.py  patch_state.py  patch_state2.py  patch_state_clippy.py  plan.txt  pr.txt
.Jules/: palette.md
.github/workflows/: ci.yml
.jules/: bolt.md
benches/: render_bench.rs
src/: index.html  lib.rs  main.rs  net.rs  serial_daemon.rs  state.rs
tests/: integration_tests.rs
