[package]
name = "grid_crawler_wsl"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serialport = "4.9.0"
rand = "0.8"
tokio = { version = "1.35", features = ["full"] }
warp = { version = "0.3", features = ["websocket"] }
futures = "0.3"
