[package]
name = "grid_crawler_wsl"
version = "0.1.0"
edition = "2024"
description = "A terminal-based tank crawler with seeded maze generation, pickups, and mobile WebSocket control."
license = "MIT"
repository = "https://github.com/MnemOnicE/grid_crawler_wsl"
homepage = "https://github.com/MnemOnicE/grid_crawler_wsl"
readme = "README.md"
keywords = ["rust", "tui", "game", "maze", "websocket", "terminal", "crossterm"]
categories = ["command-line-utilities", "network-programming", "game"]

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serialport = "4.9.0"
rand = "0.8"
tokio = { version = "1.35", features = ["full"] }
warp = { version = "0.3", features = ["websocket"] }
futures = "0.3"
